# parameter_estimation_mind

./: .gitignore  DataClasses.py  DataClasses_original.py  README.md  access_reshaped_data.py  cnn_4x56_model.py  compare_approaches.py  demo_ml_usage.py  generate_training_data.py  predict_comprehensive.py  predict_observed_data.py  predict_with_cnn.py  process_sim_data.py  pyproject.toml  reshape_sim_data.py  sim_data_transformation.ipynb  test_cnn_4x56.py  test_training_data.py  verify_reshaped_data.py
.github/: copilot-instructions.md
data/: metadata.npy  observed_data.csv  sim_features.csv  sim_targets.csv  targets_by_run.npy  time_series_by_run.npy  trimmed_observed_data.csv
