[tool.poetry]
name = "parameter-estimation"
version = "0.1.0"
description = ""
authors = ["= <william.ray@hsc.utah.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
torch = "^2.0.0"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
