[project]
name = "parameter-estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "William Ray", email = "william.ray@hsc.utah.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]
